--- a/css/header copy.css
+++ b/css/header copy.css
@@ -45,11 +45,11 @@
 }
 
 .header__navigation.active {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 22px;
   gap: 39px;
   padding-top: 58px;
@@ -63,25 +63,6 @@
   font-size: 22px;
   line-height: 50px;
   text-transform: uppercase;
-}
-
-/* .navigation-active .navigation__item:hover {
-  background: red;
-} */
-/* 
-.popup.active .navigation__link:hover {
-width: 100%;
-height: 100%;
-background-color: var(--main-color);
-} */
-
-.header__navigation.active .navigation__item:hover {
-  background-color: var(--main-color);
-}
-
-.header__navigation.active .navigation__item:focus,
-.header__navigation.active .navigation__item:active {
-  background-color: var(--secondary-color);
 }
 
 .header__btn {
@@ -151,18 +132,22 @@ background-color: var(--main-color);
     width: 100%;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    line-height: 3;
-    gap: 1px; 
+    text-align: center;   
   }
   
   .navigation__item {
-    width: 100%;
     transition: .3s ease-in-out;
   }
 
-  .navigation__link {
+  .navigation__item:hover {
     width: 100%;
+    background-color: var(--main-color);
+  }
+
+  .navigation__item:focus,
+  .navigation__item:active {
+    width: 100%;
+    background-color: var(--secondary-color);
   }
 }
 
